test/expected/explain_fvx_v.out
explain void f(void x)
               ^
16: error: void as parameter can not have a name
